load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["configfile.go"],
    importpath = "kubevirt.io/kubevirt/tests/options",
    visibility = ["//visibility:public"],
    deps = [
        "//tests/apis/config:go_default_library",
        "//tests/apis/config/scheme:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
    ],
)
